[package]
name = "chip-8-wasm"
version = "1.0.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/chip-8-rs"
documentation = "https://docs.rs/chip-8-rs"
description = """
A chip-8 emulator.
"""
categories = ["wasm", "emulators"]
keywords = ["chip-8", "emulator"]
include = ["src/**/*", "Cargo.toml"]

[badges]
travis-ci = { repository = "jeffrey-xiao/chip-8-rs", branch = "master" }

[lib]
crate-type = ["cdylib"]

[features]
default-features = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.2"
wasm-bindgen = "0.2"

[profile.release]
debug = false
lto = true
opt-level = 'z'
