[package]
name = "chipo"
version = "2.0.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/chipo-rs"
documentation = "https://docs.rs/chipo"
description = """
A chip-8 emulator.
"""
categories = ["wasm", "emulators"]
keywords = ["chip-8", "emulator"]
include = ["src/**/*", "Cargo.toml"]

[badges]
travis-ci = { repository = "jeffrey-xiao/chipo-rs", branch = "master" }

[lib]
crate-type = ["cdylib", "dylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.1"
js-sys = "0.2"
wasm-bindgen = "0.2"

[profile.release]
debug = false
lto = true
opt-level = 'z'
